MPDZ2-695 resolve linter annotations ZammadSyncService